gitops/applications/base/dns-utils-post-config/virtual-services.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: vault-ui
  namespace: ${ARGOCD_ENV_vault_namespace}
spec:
  gateways:
    - ${ARGOCD_ENV_vault_istio_gateway_namespace}/${ARGOCD_ENV_vault_istio_wildcard_gateway_name}
  hosts:
    - "vault.${ARGOCD_ENV_vault_dns_subdomain}"
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: vault-active
            port:
              number: 8200
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: argocd
  namespace: ${ARGOCD_ENV_argocd_namespace}
spec:
  gateways:
    - ${ARGOCD_ENV_argocd_istio_gateway_namespace}/${ARGOCD_ENV_argocd_istio_wildcard_gateway_name}
  hosts:
    - "argocd.${ARGOCD_ENV_argocd_dns_subdomain}"
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: argocd-server
            port:
              number: 80
#---
# apiVersion: networking.istio.io/v1beta1
# kind: VirtualService
# metadata:
#   name: ${ARGOCD_ENV_rook_ceph_bucket_config_app_name}
#   namespace: ${ARGOCD_ENV_rook_ceph_namespace}
# spec:
#   gateways:
#     - ${ARGOCD_ENV_rook_ceph_bucket_config_istio_gateway_namespace}/${ARGOCD_ENV_rook_ceph_bucket_config_istio_wildcard_gateway_name}
#   hosts:
#     - "${ARGOCD_ENV_rook_ceph_bucket_config_app_name}.${ARGOCD_ENV_rook_ceph_bucket_config_dns_subdomain}"
#   http:
#     - match:
#         - uri:
#             prefix: /
#       route:
#         - destination:
#             host: rook-ceph-rgw-ceph-objectstore
#             port:
#               number: 80
